all changes added

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://Ranjitha:Ranjurakshu@1234@schoolmanagementcluster.hupi7.mongodb.net/?retryWrites=true&w=majority&appName=SchoolManagementCluster
+
+MONGO_URI=mongodb+srv://ranjithay1001:ranjitha@cluster0.ijpkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
