--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 
-MONGO_URI=mongodb+srv://ranjithay1001:ranjitha@cluster0.ijpkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ranjithay1001:ranjitha@cluster0.ijpkh.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
